Fix spacing issue on ProjectCard w/ boxshadow and separator

--- a/frontend/src/portfolio/components/ProjectCard.css
+++ b/frontend/src/portfolio/components/ProjectCard.css
@@ -12,21 +12,18 @@
 .outer {
   position: relative;
   width: 100%;
-  height: calc(950px - 75vw);
-  min-height: 350px;
-  margin: 0 auto;
   overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.outer::before {
+.inner::before {
   content: '';
   position: absolute;
   border-radius: 10px;
-  height: 80%;
-  width: 90%;
+  height: 100%;
+  width: 100%;
   max-width: 800px;
   box-shadow: 0px 0px 0px 2000px #3e4d4f;
 }
